--- a/src/app/testmodule/testmodule.component.html
+++ b/src/app/testmodule/testmodule.component.html
@@ -1,7 +1,7 @@
 <p>{{name}} works!</p>
 <button [disabled]="buttonSettings"  type="button">Click Me!</button>
-
-
+<input [id]="myId" type="text" value="Samar">
+<h1>{{GreetUser()}} </h1>
 <h1 class="text-success"> Heading One</h1>
 <h2 [ngClass]="setMultipleProperties"> Heading Two</h2>
 <h3> Heading Three</h3>
