Add component for using pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,8 @@
   </div>
 
 <!-- <app-testmodule> </app-testmodule> -->
-<app-component-iteraction-test (childEvent) = "message=$event" [adminComponentName] = "adminName"> </app-component-iteraction-test>
+<!-- <app-component-iteraction-test (childEvent) = "message=$event" [adminComponentName] = "adminName"> </app-component-iteraction-test> -->
+<app-pipes-test> </app-pipes-test>
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
