--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,9 @@
 
 <!-- <app-testmodule> </app-testmodule> -->
 <!-- <app-component-iteraction-test (childEvent) = "message=$event" [adminComponentName] = "adminName"> </app-component-iteraction-test> -->
-<app-pipes-test> </app-pipes-test>
+<!-- <app-pipes-test> </app-pipes-test> -->
+<app-employee-list></app-employee-list>
+<app-employee-detail></app-employee-detail>>
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
