add code for calling api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,12 +45,11 @@
     </svg>
 
   </div>
-
 <!-- <app-testmodule> </app-testmodule> -->
 <!-- <app-component-iteraction-test (childEvent) = "message=$event" [adminComponentName] = "adminName"> </app-component-iteraction-test> -->
 <!-- <app-pipes-test> </app-pipes-test> -->
 <app-employee-list></app-employee-list>
-<app-employee-detail></app-employee-detail>>
+<!-- <app-employee-detail></app-employee-detail> -->
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
