--- a/src/app/employee-detail/employee-detail.component.html
+++ b/src/app/employee-detail/employee-detail.component.html
@@ -1,5 +1,4 @@
-<p>employee-detail works!</p>
-
+<h1> EMPLOYEE DETAILS</h1>
 
 <ul *ngFor="let emp of employees">   
     <li>{{emp.name}} {{emp.designation}} {{emp.Salary}}</li>
