--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
 <p>employee-list works!</p>
-
+<h1>EMPLOYEE DEPARTMENTS</h1>
 <!-- <ul *ngFor="let emp of employees">   
 <li>{{emp.name}}</li>
 </ul> -->
