add a new component Department-Detail and route fromn list to Detail component.Make use of activated route service to get the snapshot of the selected department and get the id of that department

--- a/src/app/department/department.component.html
+++ b/src/app/department/department.component.html
@@ -1,1 +1,9 @@
 <p>department works!</p>
+
+<ul>    
+    <li *ngFor="let d of lstDepartments">    
+
+        <span (click)="onSelect(d)"> {{d.Id}} {{d.Name}}</span> 
+
+    </li>
+</ul>
