Add paramMap observable instead of snapshot

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
     </a>
 </div> -->
 <nav class="toolbar" role="banner"> 
-  <a routerLink="/departments" style="color: white;">Departments</a>
+  <a routerLink="/lstdepartments" style="color: white;">Departments</a>
   <a routerLink="/employees" style="color: white;">Employees</a>
 </nav>
 
