--- a/src/app/department-detail/department-detail.component.html
+++ b/src/app/department-detail/department-detail.component.html
@@ -2,3 +2,5 @@
 
 <h2> Selected Department ID </h2>
 <h2> {{departmentId}}    </h2>
+
+<span (click)="previous()"> previous </span> <span (click)="next()"> next </span>
