--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,11 @@
       </svg>
     </a>
 </div> -->
-<nav class="toolbar" role="banner"> 
-  <a routerLink="/lstdepartments" style="color: white;">Departments</a>
+<nav class="toolbar" role="banner">
+  <span style="margin-left: 15px;">  
+  <a routerLink="/lstdepartments" style="color: white; margin-right: 10px;;">Departments</a>
   <a routerLink="/employees" style="color: white;">Employees</a>
+</span> 
 </nav>
 
 <div class="content" role="main">
