--- a/src/app/department-detail/department-detail.component.html
+++ b/src/app/department-detail/department-detail.component.html
@@ -1,6 +1,8 @@
-<p>department-detail works!</p>
+<h1 style="text-align: center;color:steelblue">Department Details!</h1>
 
-<h2> Selected Department ID </h2>
-<h2> {{departmentId}}    </h2>
+<h3> Selected Department ID: {{departmentId}}</h3>
 
 <span (click)="previous()"> previous </span> <span (click)="next()"> next </span>
+<div>   
+    <span (click)="goBack()">Go Back</span>
+</div>
