--- a/src/app/department/department.component.html
+++ b/src/app/department/department.component.html
@@ -1,9 +1,7 @@
-<p>department works!</p>
 
+<h1 style="text-align: center;color:steelblue">Department List!</h1>
 <ul>    
-    <li *ngFor="let d of lstDepartments">    
-
+    <li [class.Selected] = "isSelected(d)"  *ngFor="let d of lstDepartments">    
         <span (click)="onSelect(d)"> {{d.Id}} {{d.Name}}</span> 
-
     </li>
 </ul>
