add a new module for carrying out child routing

--- a/src/app/department-detail/department-detail.component.html
+++ b/src/app/department-detail/department-detail.component.html
@@ -2,6 +2,13 @@
 
 <h3> Selected Department ID: {{departmentId}}</h3>
 
+<router-outlet> </router-outlet>
+
+<p> 
+<button (click)="onchildRouteClick()">Department Overview</button>
+</p>
+
+
 <span (click)="previous()"> previous </span> <span (click)="next()"> next </span>
 <div>   
     <span (click)="goBack()">Go Back</span>
