fix routes in app-routing

--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -1,1 +1,11 @@
-<p>template-driven-forms1 works!</p>
+<div class="container-fluid">   
+
+    <h1> Enrollment Form</h1>
+    <form action="">
+        <div class="form-group">   
+            <label for="">Name</label>
+            <input type="text" class="form-control">
+        </div>
+    </form>
+
+</div>
