add form link to navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav class="toolbar" role="banner">
   <span style="margin-left: 15px;">  
-  <a routerLink="/lstdepartments" style="color: white; margin-right: 10px;;">Departments</a>
-  <a routerLink="/employees" style="color: white;">Employees</a>
+  <a routerLink="/lstdepartments" style="color: white; margin-right: 10px;">Departments</a>
+  <a routerLink="/employees" style="color: white; margin-right: 10px;">Employees</a>
+  <a routerLink="/template-driven-forms1" style="color: white; margin-right: 10px;">Enrollment Form</a>
 </span> 
 </nav>
 
@@ -14,8 +15,6 @@
 <!-- <app-employee-detail></app-employee-detail> -->
 
 <router-outlet></router-outlet>
-
-
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
