--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -1,11 +1,42 @@
-<div class="container-fluid">   
+<div class="container-fluid">
 
     <h1> Enrollment Form</h1>
     <form action="">
-        <div class="form-group">   
+        <div class="form-group">
             <label for="">Name</label>
             <input type="text" class="form-control">
         </div>
+        <div class="form-group">
+            <label for="">Email</label>
+            <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="">Phone</label>
+            <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="">Select Class</label><br>  
+            <select name="" id="" class="btn btn-secondary dropdown-toggle">
+                <option value="" selected>I am interested in</option>
+                <option *ngFor="let topic of topics">{{topic}}</option>
+            </select>
+        </div>
+        <div class="mb-3">   
+            <label for="">Time Preference</label>
+            <div class="form-check">   
+                <input class="form-check-input" type="radio" name="timePreference" value="morning">
+                <label for="" class="form-check-label">Morning (9AM - 12PM)</label>
+            </div>
+            <div class="form-check">   
+                <input class="form-check-input" type="radio" name="timePreference" value="evening">
+                <label for="" class="form-check-label">Morning (5PM - 8PM)</label>
+            </div>
+        </div>
+        <div class="form-check mb-3">   
+            <input type="checkbox" class="form-check-input">
+            <label class="form-check-label">Send me promotional offers</label>
+        </div>
+        <button class="btn btn-primary" type="submit">Submit Form</button>
     </form>
 
 </div>
