--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -1,40 +1,60 @@
 <div class="container-fluid">
 
     <h1> Enrollment Form</h1>
-    <form action="">
+    <form #enrollmentForm="ngForm">
+        {{enrollmentForm.value | json}}
         <div class="form-group">
-            <label for="">Name</label>
-            <input type="text" class="form-control">
+            <label>Name</label>
+            <input type="text" class="form-control" name="username" ngModel>
         </div>
         <div class="form-group">
-            <label for="">Email</label>
-            <input type="text" class="form-control">
+            <label>Email</label>
+            <input type="text" class="form-control" name="email" ngModel>
         </div>
         <div class="form-group">
-            <label for="">Phone</label>
-            <input type="text" class="form-control">
+            <label>Phone</label>
+            <input type="text" class="form-control" name="phone" ngModel>
         </div>
         <div class="form-group">
-            <label for="">Select Class</label><br>  
-            <select name="" id="" class="btn btn-secondary dropdown-toggle">
+            <label>Select Class</label><br>  
+            <select class="btn btn-secondary dropdown-toggle" name="topic" ngModel>
                 <option value="" selected>I am interested in</option>
                 <option *ngFor="let topic of topics">{{topic}}</option>
             </select>
         </div>
         <div class="mb-3">   
-            <label for="">Time Preference</label>
+            <label>Time Preference</label>
             <div class="form-check">   
-                <input class="form-check-input" type="radio" name="timePreference" value="morning">
-                <label for="" class="form-check-label">Morning (9AM - 12PM)</label>
+                <input class="form-check-input" type="radio" name="timePreference" value="morning" ngModel>
+                <label class="form-check-label">Morning (9AM - 12PM)</label>
             </div>
             <div class="form-check">   
-                <input class="form-check-input" type="radio" name="timePreference" value="evening">
-                <label for="" class="form-check-label">Morning (5PM - 8PM)</label>
+                <input class="form-check-input" type="radio" name="timePreference" value="evening" ngModel>
+                <label class="form-check-label">Morning (5PM - 8PM)</label>
             </div>
         </div>
         <div class="form-check mb-3">   
-            <input type="checkbox" class="form-check-input">
+            <input type="checkbox" class="form-check-input" name="subscribe" ngModel>
             <label class="form-check-label">Send me promotional offers</label>
+        </div>
+        <div ngModelGroup="address">   
+            <div class="form-group">
+                <label>Street</label>
+                <input type="text" class="form-control" name="street" ngModel>
+            </div>
+            <div class="form-group">
+                <label>City</label>
+                <input type="text" class="form-control" name="city" ngModel>
+            </div>
+            <div class="form-group">
+                <label>State</label>
+                <input type="text" class="form-control" name="state" ngModel>
+            </div>
+            <div class="form-group">
+                <label>Postal Code</label>
+                <input type="text" class="form-control" name="postalcode" ngModel>
+            </div>
+
         </div>
         <button class="btn btn-primary" type="submit">Submit Form</button>
     </form>
