--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -37,7 +37,7 @@
             <input type="checkbox" class="form-check-input" name="subscribe" ngModel>
             <label class="form-check-label">Send me promotional offers</label>
         </div>
-        <div ngModelGroup="address">   
+        <!-- <div ngModelGroup="address">   
             <div class="form-group">
                 <label>Street</label>
                 <input type="text" class="form-control" name="street" ngModel>
@@ -54,8 +54,7 @@
                 <label>Postal Code</label>
                 <input type="text" class="form-control" name="postalcode" ngModel>
             </div>
-
-        </div>
+        </div> -->
         <button class="btn btn-primary" type="submit">Submit Form</button>
     </form>
 
