--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -5,7 +5,8 @@
         {{enrollmentForm.value | json}}
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control" name="username" ngModel>
+            <input type="text" class="form-control" #name="ngModel" name="username" ngModel>
+            {{name.pristine}}
         </div>
         <div class="form-group">
             <label>Email</label>
@@ -59,3 +60,11 @@
     </form>
 
 </div>
+
+
+<!-- ng-touched ---control has been visited. When a form is loaded for the first time
+ng-untouched ---control has not been visited or visited but now moved away
+ng-pristine ---value of control not changed
+ng-dirty --- value of control changed
+ng-valid ---value of control valid
+ng-invalid ---value of control not valid -->
