--- a/src/app/testmodule/testmodule.component.html
+++ b/src/app/testmodule/testmodule.component.html
@@ -5,7 +5,7 @@
 <h1 class="text-success"> Heading One</h1>
 <h2 [ngClass]="setMultipleProperties"> Heading Two</h2>
 <h3> Heading Three</h3>
-<h4 [class.error] = "hasError"> Heading Four</h4>
+<h4 [class.text-error] = "hasError"> Heading Four</h4>
 
 <!-- Event Binding -->
 <button (click)="onclick($event)">Event Button</button> <br>    
