--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -5,7 +5,7 @@
         {{enrollmentForm.value | json}}
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control" #name="ngModel" name="username" ngModel>
+            <input type="text" required class="form-control" [class.is-invalid]="name.invalid && name.touched" #name="ngModel" name="username" ngModel>
             {{name.pristine}}
         </div>
         <div class="form-group">
@@ -14,10 +14,10 @@
         </div>
         <div class="form-group">
             <label>Phone</label>
-            <input type="text" class="form-control" name="phone" ngModel>
+            <input type="text" #phone="ngModel" pattern="^\d{10}$" [class.is-invalid]="phone.invalid && phone.touched"  class="form-control" name="phone" ngModel>
         </div>
         <div class="form-group">
-            <label>Select Class</label><br>  
+            <label>Select Class</label><br> 
             <select class="btn btn-secondary dropdown-toggle" name="topic" ngModel>
                 <option value="" selected>I am interested in</option>
                 <option *ngFor="let topic of topics">{{topic}}</option>
