--- a/src/app/template-driven-forms1/template-driven-forms1.component.html
+++ b/src/app/template-driven-forms1/template-driven-forms1.component.html
@@ -24,12 +24,23 @@
             </div>
             {{phone.touched}} {{phone.invalid}} 
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
+            ONLY WORKS WHEN THE DEFAULT VALUE IS AN EMPTY STRING
             <label>Select Class</label><br> 
-            <select class="btn btn-secondary dropdown-toggle" name="topic" ngModel>
+            <select class="btn btn-secondary dropdown-toggle" required [class.is-invalid]="topic.invalid && topic.touched" name="topic" #topic="ngModel" ngModel>
                 <option value="" selected>I am interested in</option>
                 <option *ngFor="let topic of topics">{{topic}}</option>
-            </select>
+            </select><br>   
+            <small class="text-danger" [class.d-none]="topic.untouched || topic.valid">Please Select Topic</small>
+        </div> -->
+        <div class="form-group">
+            <label>Select Class</label><br> 
+            <select (blur)="validateTopic(topic.value)" (change)="validateTopic(topic.value)" 
+            [class.is-invalid]="blurTopicString && topic.touched" class="btn btn-secondary dropdown-toggle"  name="topic" #topic="ngModel" ngModel>
+                <option value="default" selected>I am interested in</option>
+                <option *ngFor="let topic of topics">{{topic}}</option>
+            </select><br>   
+            <small class="text-danger" [class.d-none]="!blurTopicString || topic.untouched">Please Select Topic</small>
         </div>
         <div class="mb-3">   
             <label>Time Preference</label>
@@ -39,7 +50,7 @@
             </div>
             <div class="form-check">   
                 <input class="form-check-input" type="radio" name="timePreference" value="evening" ngModel>
-                <label class="form-check-label">Morning (5PM - 8PM)</label>
+                <label class="form-check-label">Evening (5PM - 8PM)</label>
             </div>
         </div>
         <div class="form-check mb-3">   
